# generator

./: .gitignore  CMakeLists.txt  README.md  codeforces_problem.html  example_get.tex  generate_python_proto.sh  py_requirements.txt  template.tex
.cache/clangd/index/: ParseProblemJSON.cpp.EDB19892065BB33E.idx  ParseProblemJson.cpp.E1BE3BF736EF5486.idx  ParseProblemStatisticsJson.cpp.DAC5C6643ACA5562.idx  Problem.h.E40472C92B1D3FD2.idx  Type.h.CA18A6932428EB18.idx  main.cpp.ED6A4A2B03F74D41.idx
cmake/: CompilerOptions.cmake  Dependencies.cmake  Package.cmake  Protobuf.cmake  SourceFiles.cmake
include/controller/: CfController.h  СfController.cpp
include/entities/: Object.h  Problem.h  ProblemStatistics.h  Type.h
include/utils/: Formater.h  JsonConverter.h  JsonConverterFactory.h  ProblemJsonConverter.h  ProblemStatisticsJsonConverter.h
proto/: connection.proto
pyparser/: parser.py
server/: connection_pb2.py  connection_pb2_grpc.py  py_server.py
server/include/: codeforces_problem.txt  fullhtml.py  parser.py
src/: main.cpp  output.txt
src/utils/: JsonConverterFactory.cpp  ParseProblemStatisticsJson.cpp  ProblemJsonConverter.cpp  ProblemStatisticsJsonConverter.cpp
tests/: ConverterExample.cpp
